assets/stylesheets/components/navbar.scss
.navbar{
  font-family: 'Helvetica', sans-serif;
  color: white;
  position: fixed;
  top: 0;
  left: 0;
  z-index: 1;
  width: 100%;
  height: 50px;
  background-color: rgba(17, 17, 9, 1);
  padding: 10px 15px;
  margin: 0;
  border: 0;
}

.logo{
  margin-right: 20px;
}

.nav-left{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.nav-links{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  font-size: 12px;
  text-decoration: none;
  font-weight: bold;
  .nav-link{
    margin-right: 10px;
  }
}

.nav-links :hover{
  text-decoration: none;
  color: white;
}

.nav-phone{
  margin-right: 14px;
  font-size: 20px;
  padding: 5px 10px;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  h4{
    margin-right: 10px;
  }
  .phone-top{
    text-decoration: none;
    font-size: 12px;
    align-items: center;
    margin-top: 2px;
  }
  .phone-top :hover{
    text-decoration: none;
    color: white;
  }
  .phone-middle{
    border-top: 1px solid white;
  }
  .phone-middle,.phone-bottom{
    font-size: 12px;
    text-align: center;
  }
}

.phone-box{
  border: 1px solid white;
  background-color: rgba(175, 117, 75, 1);
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  width: 125px;
  height: 50px;
}

